--- a/gui.html
+++ b/gui.html
@@ -24,6 +24,12 @@
 
     <div class="taskbar">
         <button class="start-button" onclick="toggleStartMenu()">Start</button>
+        <div class="taskbar-status">
+            <span id="internet-status">Internet: Connected</span>
+            <span id="current-time"></span>
+            <span id="speaker-status">Speaker: On</span>
+            <span id="current-date"></span>
+        </div>
     </div>
 
     <div class="start-menu" id="start-menu">
@@ -33,7 +39,7 @@
             <ul>
                 <li onclick="openFileExplorer()">File Explorer</li>
                 <li>Settings</li>
-                <li>Terminal</li>
+                <li onclick="openTerminal()">Terminal</li>
             </ul>
         </div>
     </div>
@@ -98,6 +104,19 @@
             >
             <iframe id="browser-iframe" sandbox="allow-same-origin allow-scripts allow-forms"></iframe>
         </div>             
+    </div>
+
+    <div class="browser-window" id="terminal">
+        <div class="browser-header" onmousedown="startMove(event, this.parentNode)">
+            Terminal
+            <div>
+                <button onclick="closeWindowById('terminal')">X</button>
+            </div>
+        </div>
+        <div class="browser-content">
+            <div id="terminal-output"></div>
+            <input type="text" id="terminal-input" onkeydown="handleTerminalInput(event)">
+        </div>
     </div>
 
     <div class="context-menu" id="context-menu">
